--- a/package.json
+++ b/package.json
@@ -9,14 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.3.3",
+    "chart.js": "^4.2.1",
+    "color": "^4.2.3",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "faker": "^6.6.6",
+    "global": "^4.4.0",
+    "highcharts-react-official": "^3.1.0",
+    "js": "^0.1.0",
     "next": "13.2.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-funnel-pipeline": "^0.2.0",
     "typescript": "5.0.3"
   }
 }
