--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
     "antd": "^5.3.3",
+    "axios": "^1.3.4",
     "chart.js": "^4.2.1",
     "color": "^4.2.3",
     "eslint": "8.37.0",
